--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,11 @@ body {
     color: #555;
     text-shadow: 3px 1px 1px #78A3A6;
 }
+#musicPlayer{
+    position: absolute;
+    bottom: 0%; 
+    left: 0%;
+}
 #game{
     position: absolute;
     top: 0%; 
